--- a/build.xml
+++ b/build.xml
@@ -3,8 +3,8 @@
     <property environment="env"/>
     <property name="dev.username"          value="support+gf@impactbox.co.uk.developib"/>
     <property name="dev.password"          value="gRSTw7ZmOPf43Lv1870ISpchjbU9CVsXC6xhn"/>
-    <property name="testing.username"       value="support+tt@impactbox.co.uk.impactbox"/>
-    <property name="testing.password"       value="5BbevmrH2NG7HP1vdJfiO2SGJ2dxJIWGAAKx"/>
+    <property name="testing.username"       value=""/>
+    <property name="testing.password"       value=""/>
     <property name="prod.username"          value="support+gf@impactbox.co.uk"/>
     <property name="prod.password"          value="tzwQ1KaRh3JxSQjWIiYJ1bpeNimyhOAq5qKdL"/>
     <property name="sf.serverurl"           value="https://login.salesforce.com"/>
