rmoved content asset wildcard

--- a/lib/package.xml
+++ b/lib/package.xml
@@ -77,7 +77,7 @@
   </types>
   <types>
         <name>ContentAsset</name>
-        <members>*</members>
+        <members>IMG_4144</members>
     </types>
    <types>
     <name>CustomApplication</name>
