changed relationships in production

--- a/lib/package.xml
+++ b/lib/package.xml
@@ -78,7 +78,7 @@
   </types>
   <types>
         <name>ContentAsset</name>
-        <members>IMG_4144</members>
+        <members>IMG_4144.asset</members>
     </types>
    <types>
     <name>CustomApplication</name>
