custom tabs added

--- a/lib/package.xml
+++ b/lib/package.xml
@@ -84,5 +84,9 @@
     <name>CustomApplication</name>
     <members>Get_Further</members>
 </types>
+<types>
+<members>*</members>
+<name>CustomTab</name>
+</types>
     <version>50.0</version>
 </Package>
