--- a/lib/package.xml
+++ b/lib/package.xml
@@ -74,9 +74,13 @@
         <name>WorkflowAlert</name>
     </types>    
     <types>
+        <members>Sharing</members>
+        <name>Settings</name>
+    </types>   
+    <types>
         <members>unfiled$public</members>
         <members>unfiled$public/Register_Session_Reminder_Tutors_1634550726305</members>
-       <members>unfiled$public/ Session_Register_Reminder_Email_Tutors_1634551435993</members>
+       <members>unfiled$public/Session_Register_Reminder_Email_Tutors_1634551435993</members>
         <members>unfiled$public/Session_Register_Reminder_Email_24_Hours_1635706689115</members>
         <name>EmailTemplate</name>
     </types>
