--- a/lib/package.xml
+++ b/lib/package.xml
@@ -82,6 +82,7 @@
         <members>unfiled$public/Register_Session_Reminder_Tutors_1634550726305</members>
        <members>unfiled$public/Session_Register_Reminder_Email_Tutors_1634551435993</members>
         <members>unfiled$public/Session_Register_Reminder_Email_24_Hours_1635706689115</members>
+        <members>unfiled$public/Welcome_to_Get_Further</members>
         <name>EmailTemplate</name>
     </types>
    <types>
