--- a/lib/package.xml
+++ b/lib/package.xml
@@ -84,10 +84,11 @@
   </types>
     <types>
         <members>Tutors</members>
+        <members>Welcome</members>
         <members>Tutors/Register_Session_Reminder_Tutors_1634550726305</members>
        <members>Tutors/Session_Register_Reminder_Email_Tutors_1634551435993</members>
         <members>Tutors/Session_Register_Reminder_Email_24_Hours_1635706689115</members>
-        <members>Tutors/Welcome_to_Get_Further</members>
+        <members>Welcome/Welcome_to_Get_Further</members>
         <name>EmailTemplate</name>
     </types>
    <types>
